--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <div id="footer">
             <div class="lockup">
                 <div class="logo">
-                    <img src="../img/logo.png" alt="Logo">
+                    <img src="img/logo.png" alt="Logo">
                 </div> <!--End of logo-->
                 <div class="content-wrap">
                     <nav>
